--- a/packages/fakeyou.com/src/components/common/TempTextArea/TextArea.scss
+++ b/packages/fakeyou.com/src/components/common/TempTextArea/TextArea.scss
@@ -1,13 +1,8 @@
 .fy-textarea {
-  &:textarea {
-    margin-bottom: 1rem;
+  margin-bottom: 1.25rem;
 
-    :only-child {
-      margin-bottom: 0;
-    }
-
-    :last-child {
-      margin-bottom: 0;
-    }
+  &:only-child,
+  &:last-child {
+    margin-bottom: 0;
   }
 }
